# QTransport

./: .gitignore  CMakeLists.txt
cppcore/: CMakeLists.txt
cppcore/include/: globals.h  greenfunction.h  leadselfenergy.h  selfenergy.h
cppcore/src/: greenfunction.cpp  leadselfenergy.cpp  main.cpp.bak  selfenergy.cpp
cppmodule/: CMakeLists.txt
cppmodule/include/: pygreen.h  pyleadself.h  pyself.h  wrappers.h
cppmodule/src/: green.cpp  leadself.cpp  main.cpp  self.cpp
doc/: theory.ipynb
doc/.ipynb_checkpoints/: theory-checkpoint.ipynb
test/: _test_dos.py  _test_mpi.py  config.txt  conftest.py  test_cpp.py  test_cpp_leads.py  test_density.py  test_mpi.py  test_mpi_transport.py  test_occupation.py  test_scipy_blas.py  test_transmission.py
test/data/: poly2_ED.pckl  poly2_N.pckl  poly2_leads.gpw  poly2_rho.pckl  poly2_scatt.xyz
test/data/1D/: ET.pckl  trans.py
test/data/2D/: ET.pckl
test/data/temp/: test_dump_lists.py
timing/: mpi.py
transport/: __init__.py  bands.py  block.py  calculators.py  continued_fraction.py  coupledhamiltonian.py  greenfunction.py  internalselfenergy.py  mpi.py  selfenergy.py  tk_calc.py  tk_gpaw.py  tkgpaw.py  tools.py
transport/analysis/: analysis_tools.py  plotter.py  tk_analysis.py  tkanalysis.py
transport/lcao/: bands.py  kptsfactory.py  principallayer.py  thread_pool.py  tightbinding.py  tk_lcao.py  tklcao.py
transport/linalg/: matrix.py
transport/poisson/: grid.py  poisson.py
transport/solvers/: bond_current.py  recursive.py  recursive_gf.py  tk_recursive.py  transmission.py  tridiagonal.py
(+10 files in other folders)
